classDiagram
    direction LR

    class User {
        +UUID Id
        +String FirstName
        +String LastName
        +String Email
        +String Passwrod
        +Date BirthDate
        +Int PhoneNum
        +Boolean isAdmin
        +Boolean isOwner
        +Register()
        +Update_profile_info()
        +Delete_user()
        +Auth()
        +Histroy()
    }

    class Place {
        +String Title
        +String Description
        +Boolean Availability
        +Float Price
        +Float latitude
        +Float Longitude
        +Create_place()
        +Update_place()
        +Delete_place()
        +List_place()
    }

    class Review {
        +String Rating
        +String Comment
        +Create_review()
        +Update_review()
        +Delete_review()
        +List_review()
    }

    class Amenities {
        +String Name
        +String Description
        +Create_amenities()
        +Update_amenities()
        +Delete_amenities()
        +List_amenities()
    }

    class favorite {
        +Boolean isFavorite
        +Create_favorite()
    }

    class DateTime {
        +Datetime Create_date
        +Datetime Update_date
    }

    User " 𝟏 " --> " 𝟎..* " Place
    User " 𝟏 " --> " 𝟎..𝟏 " Review
    Place " 𝟏 " --> " 𝟎..* " Review
    Place " *..𝟏 " --> " 𝟏..* " Amenities
    
    User .. favorite
    favorite .. Place
    
    DateTime --* User
    DateTime --* Place
    DateTime --* Review

    style User fill:#e1f5fe,stroke:#0288d1,stroke-width:2px,color:#000
    style Place fill:#e8f5e9,stroke:#388e3c,stroke-width:2px,color:#000
    style Review fill:#fff3e0,stroke:#f57c00,stroke-width:2px,color:#000
    style Amenities fill:#f3e5f5,stroke:#7b1fa2,stroke-width:2px,color:#000
    style favorite fill:#fce4ec,stroke:#c2185b,stroke-width:2px,color:#000
    style DateTime fill:#f5f5f5,stroke:#616161,stroke-width:2px,color:#000